<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#B1F4FD">


        <TextView
            android:id="@+id/studentName"
            android:layout_width="320dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="20dp"
            android:text="@string/studentName"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/studentId"
            android:layout_width="253dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="20dp"
            android:text="@string/studentId"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details"
            android:layout_width="310dp"
            android:layout_height="142dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="276dp"
            android:layout_marginEnd="20dp"
            android:text="@string/confirmation_details"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>